feat: show line numbers in file
